Modif HTML&CSS suivant maquette

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
 <header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+	<h1><a href="#"><img src="./assets/images/Logo.png" alt=" Page d'accueil Sophie Bluel - Architecte d'intérieur"></a></h1>
 	<nav>
-		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+		<ul class="liste-nav">
+			<li><a href="#portfolio">projets</a></li>
+			<li><a href="#contact">contact</a></li>
+			<li><a>login</a></li>
+			<li><a href="https://www.instagram.com/"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
 		</ul>
 	</nav>
 </header>
