Finalisation HTML&CSS

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -39,7 +39,7 @@
 		<div class="gallery">
 			<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
-				<figcaption>Abajour Tahina</figcaption>
+				<figcaption>Aba-jour Tahina</figcaption>
 			</figure>
 			<figure>
 				<img src="assets/images/appartement-paris-v.png" alt="Appartement Paris V">
