--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="icon" type="image/x-icon" href="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/images/oc-icon.png">
 	<script type="module" src="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/scripts/script.js" defer></script>
 </head>
 <body>
@@ -37,7 +38,10 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
-		<button class="btn-maj">Voir mes derniers travaux</button>
+		<div class="menu-filter">
+			<button class="btn-maj">Voir mes derniers travaux</button>
+		</div>
+		
 		<div class="gallery">
 			<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
