Rajout des filtres, design CSS et restructuration du code en fonction

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -36,12 +36,15 @@
 			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
 		</article>
 	</section>
+
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
-		<div class="menu-filter">
-			<button class="btn-maj">Voir mes derniers travaux</button>
-		</div>
+		<h2>Mes projets</h2>
 		
+			<div class="menu-filter">
+				<button class="btn-maj">Tous</button>
+			</div>
+		
+
 		<div class="gallery">
 			<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
