--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,7 +11,9 @@
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="icon" type="image/x-icon" href="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/images/oc-icon.png">
 	<script type="module" src="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/scripts/script.js" defer></script>
+	<script type="module" src="assets/scripts/filtre.js" defer></script>
 </head>
+
 <body>
 <header>
 	<h1><a href="#"><img src="./assets/images/Logo.png" alt=" Page d'accueil Sophie Bluel - Architecte d'intérieur"></a></h1>
