--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,109 +10,113 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="icon" type="image/x-icon" href="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/images/oc-icon.png">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+          integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script type="module" src="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/scripts/script.js" defer></script>
 	<script type="module" src="assets/scripts/filtre.js" defer></script>
 </head>
 
 <body>
-<header>
-	<h1><a href="#"><img src="./assets/images/Logo.png" alt=" Page d'accueil Sophie Bluel - Architecte d'intérieur"></a></h1>
-	<nav>
-		<ul class="liste-nav">
-			<li><a href="#portfolio">projets</a></li>
-			<li><a href="#contact">contact</a></li>
-			<li><a>login</a></li>
-			<li><a href="https://www.instagram.com/"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
-		</ul>
-	</nav>
-</header>
-<main>
-	<section id="introduction">
-		<figure>
-			<img src="./assets/images/sophie-bluel.png" alt="">
-		</figure>
-		<article>
-			<h2>Designer d'espace</h2>
-			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
-			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
-		</article>
-	</section>
+<div class="contenuP">
+	<header>
+		<h1><a href="#"><img src="./assets/images/Logo.png" alt=" Page d'accueil Sophie Bluel - Architecte d'intérieur"></a></h1>
+		<nav>
+			<ul class="liste-nav">
+				<li><a href="#portfolio">projets</a></li>
+				<li><a href="#contact">contact</a></li>
+				<li><a href="/Portfolio-architecte-sophie-bluel/FrontEnd/connexionFormulaire.html">login</a></li>
+				<li><a href="https://www.instagram.com/"><i class=" fa-lg fa-brands fa-instagram"></i></a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<section id="introduction">
+			<figure>
+				<img src="./assets/images/sophie-bluel.png" alt="">
+			</figure>
+			<article>
+				<h2>Designer d'espace</h2>
+				<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
+				<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
+				<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
+			</article>
+		</section>
 
-	<section id="portfolio">
-		<h2>Mes projets</h2>
-		
-			<div class="menu-filter">
-				<button class="btn-maj">Tous</button>
+		<section id="portfolio">
+			<h2>Mes projets</h2>
+			
+				<div class="menu-filter">
+					<button class="btn-maj">Tous</button>
+				</div>
+			
+
+			<div class="gallery">
+				<figure>
+					<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
+					<figcaption>Aba-jour Tahina</figcaption>
+				</figure>
+				<figure>
+					<img src="assets/images/appartement-paris-v.png" alt="Appartement Paris V">
+					<figcaption>Appartement Paris V</figcaption>
+				</figure>
+				<figure>
+					<img src="assets/images/restaurant-sushisen-londres.png" alt="Restaurant Sushisen - Londres">
+					<figcaption>Restaurant Sushisen - Londres</figcaption>
+				</figure>
+				<figure>
+					<img src="assets/images/la-balisiere.png" alt="Villa “La Balisiere” - Port Louis">
+					<figcaption>Villa “La Balisiere” - Port Louis</figcaption>
+				</figure>
+				<figure>
+					<img src="assets/images/structures-thermopolis.png" alt="Structures Thermopolis">
+					<figcaption>Structures Thermopolis</figcaption>
+				</figure>
+				<figure>
+					<img src="assets/images/appartement-paris-x.png" alt="Appartement Paris X">
+					<figcaption>Appartement Paris X</figcaption>
+				</figure>
+				<figure>
+					<img src="assets/images/le-coteau-cassis.png" alt="Pavillon “Le coteau” - Cassis">
+					<figcaption>Pavillon “Le coteau” - Cassis</figcaption>
+				</figure>
+				<figure>
+					<img src="assets/images/villa-ferneze.png" alt="Villa Ferneze - Isola d’Elba">
+					<figcaption>Villa Ferneze - Isola d’Elba</figcaption>
+				</figure>
+				<figure>
+					<img src="assets/images/appartement-paris-xviii.png" alt="Appartement Paris XVIII">
+					<figcaption>Appartement Paris XVIII</figcaption>
+				</figure>
+				<figure>
+					<img src="assets/images/bar-lullaby-paris.png" alt="Bar “Lullaby” - Paris">
+					<figcaption>Bar “Lullaby” - Paris</figcaption>
+				</figure>
+				<figure>
+					<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
+					<figcaption>Hotel First Arte - New Delhi</figcaption>
+				</figure>
 			</div>
-		
-
-		<div class="gallery">
-			<figure>
-				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
-				<figcaption>Aba-jour Tahina</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/appartement-paris-v.png" alt="Appartement Paris V">
-				<figcaption>Appartement Paris V</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/restaurant-sushisen-londres.png" alt="Restaurant Sushisen - Londres">
-				<figcaption>Restaurant Sushisen - Londres</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/la-balisiere.png" alt="Villa “La Balisiere” - Port Louis">
-				<figcaption>Villa “La Balisiere” - Port Louis</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/structures-thermopolis.png" alt="Structures Thermopolis">
-				<figcaption>Structures Thermopolis</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/appartement-paris-x.png" alt="Appartement Paris X">
-				<figcaption>Appartement Paris X</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/le-coteau-cassis.png" alt="Pavillon “Le coteau” - Cassis">
-				<figcaption>Pavillon “Le coteau” - Cassis</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/villa-ferneze.png" alt="Villa Ferneze - Isola d’Elba">
-				<figcaption>Villa Ferneze - Isola d’Elba</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/appartement-paris-xviii.png" alt="Appartement Paris XVIII">
-				<figcaption>Appartement Paris XVIII</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/bar-lullaby-paris.png" alt="Bar “Lullaby” - Paris">
-				<figcaption>Bar “Lullaby” - Paris</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
-				<figcaption>Hotel First Arte - New Delhi</figcaption>
-			</figure>
-		</div>
-	</section>
-	<section id="contact">
-		<h2>Contact</h2>
-		<p>Vous avez un projet ? Discutons-en !</p>
-		<form action="#" method="post">
-			<label for="name">Nom</label>
-			<input type="text" name="name" id="name">
-			<label for="email">Email</label>
-			<input type="email" name="email" id="email">
-			<label for="message">Message</label>
-			<textarea name="message" id="message" cols="30" rows="10"></textarea>
-			<input type="submit" value="Envoyer">
-		</form>
-	</section>
-</main>
-
-<footer>
+		</section>
+		<section id="contact">
+			<h2>Contact</h2>
+			<p>Vous avez un projet ? Discutons-en !</p>
+			<form action="#" method="post">
+				<label for="name">Nom</label>
+				<input type="text" name="name" id="name">
+				<label for="email">Email</label>
+				<input type="email" name="email" id="email">
+				<label for="message">Message</label>
+				<textarea name="message" id="message" cols="30" rows="10"></textarea>
+				<input type="submit" value="Envoyer">
+			</form>
+		</section>
+	</main>
+</div>
+<footer class="footerContent">
 	<nav>
 		<ul>
-			<li>Mentions Légales</li>
+			<li><a>Mentions Légales</a></li>
 		</ul>
 	</nav>
 </footer>
