Véification admin et ajout du bouton modif

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -44,11 +44,13 @@
 		</section>
 
 		<section id="portfolio">
+			<div class="titleMore">
 			<h2>Mes projets</h2>
-			
-				<div class="menu-filter">
-					<button class="btn-maj">Tous</button>
-				</div>
+			</div>
+			<i class=" fa-regular fa-pen-to-square"><span id="modif">modifier</span></i>
+			<div class="menu-filter">
+				<button class="btn-maj">Tous</button>
+			</div>
 			
 
 			<div class="gallery">
