Ajout mode édition et gestion logout

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,18 +18,27 @@
 </head>
 
 <body>
-<div class="contenuP">
+
+	<!-- Ajout de la partie déstiné à informer que le mode édition administrateur est accessible -->
+	<div class="editionMode">
+		<i class=" fa-regular fa-pen-to-square"></i>
+		<span class="editionModeTxt">Mode édition</span>
+	</div>
+
+	<div class="contenuP">
+
 	<header>
 		<h1><a href="#"><img src="./assets/images/Logo.png" alt=" Page d'accueil Sophie Bluel - Architecte d'intérieur"></a></h1>
 		<nav>
 			<ul class="liste-nav">
 				<li><a href="#portfolio">projets</a></li>
 				<li><a href="#contact">contact</a></li>
-				<li><a href="/Portfolio-architecte-sophie-bluel/FrontEnd/connexionFormulaire.html">login</a></li>
+				<li><a class="login" href="/Portfolio-architecte-sophie-bluel/FrontEnd/connexionFormulaire.html">login</a></li>
 				<li><a href="https://www.instagram.com/"><i class=" fa-lg fa-brands fa-instagram"></i></a></li>
 			</ul>
 		</nav>
 	</header>
+
 	<main>
 		<section id="introduction">
 			<figure>
