--- a/FrontEnd/connexionFormulaire.html
+++ b/FrontEnd/connexionFormulaire.html
@@ -19,44 +19,58 @@
 </head>
 
 <body>
-<header class="form-head">
-	<h1><a href="/Portfolio-architecte-sophie-bluel/FrontEnd/index.html"><img src="./assets/images/Logo.png" alt=" Page d'accueil Sophie Bluel - Architecte d'intérieur"></a></h1>
-	<nav>
-		<ul class="liste-nav">
-			<li><a href="/Portfolio-architecte-sophie-bluel/FrontEnd/index.html#portfolio">projets</a></li>
-			<li><a href="/Portfolio-architecte-sophie-bluel/FrontEnd/index.html#contact">contact</a></li>
-			<li><a>login</a></li>
-			<li><a href="https://www.instagram.com/"><i class=" fa-lg fa-brands fa-instagram"></i></a></li>
-		</ul>
-	</nav>
-</header>
-<main class="formMain">
-	
-    <!-- Mise en place de la section contenant le formulaire d'authentification -->
-	<section id="contactForm">
-		<h2>Log In</h2>
-		<form action="#" method="post">
-			<label for="email">E-mail</label>
-			<input type="email" name="email" id="email" required>
 
-            <label for="pass-word">Mot de passe</label>
-			<input type="password" name="pass-word" id="pass-word" required>
-			
-			<input type="submit" value="Se connecter">
-		</form>
-        <a class="passwordForget">Mot de passe oublié</a>
-	</section>
+	<!-- En-tête de la page contenant le menu de navigation et logo du site -->
+	<header class="form-head">
+		<h1><a href="/Portfolio-architecte-sophie-bluel/FrontEnd/index.html"><img src="./assets/images/Logo.png" alt="Sophie Bluel - Page d'accueil"></a></h1>
+		<nav>
+			<ul class="liste-nav">
+				<li><a href="/Portfolio-architecte-sophie-bluel/FrontEnd/index.html#portfolio">projets</a></li>
+				<li><a href="/Portfolio-architecte-sophie-bluel/FrontEnd/index.html#contact">contact</a></li>
+				<!-- Ajout d'un aria pour l'accésibilité et les sr et indiquer qu'il s'agit de la page actuelle -->
+				<li><a href="#" aria-current="page">login</a></li>
+				<li><a href="https://www.instagram.com/"><span class="sr-only">Lien Instagram de Sophie Bluel</span><i class=" fa-lg fa-brands fa-instagram" aria-hidden="true"></i></a></li>
+			</ul>
+		</nav>
+	</header>
 
-</main>
+	<!-- Contenu principale de la page  -->
+	<main class="formMain">
+		
+		<!-- Mise en place de la section contenant le formulaire d'authentification -->
+		 <!-- Utilisationd de required pour la sécurité des informations, de autocomplete pour l'expérience UX mobile avec amélioration
+		  de la rapidité -->
+		<section id="contactForm">
+			<h2>Log In</h2>
+			<form action="#" method="post">
+				<label for="email">E-mail</label>
+				<input type="email" name="email" id="email" required autocomplete="email">
 
-<footer>
-    <div class="footerContent">
-        <nav>
-            <ul>
-                <li><a>Mentions Légales</a></li>
-            </ul>
-        </nav>
-    </div>
-</footer>
+				<label for="pass-word">Mot de passe</label>
+
+				<!-- Partie input pour le mot de passe avec title pour indication du format min nécessaire et aria-describedby pour donner ces infos
+				 vocalement sur des navigateurs qui ne prennent pas en compte le title -->
+				<input type="password" name="pass-word" id="pass-word" required autocomplete="current-password" aria-describedby="passwordHelp"
+				title="Doit contenir entre 2 et 8 caractères - Minimum 1 majuscule, 1 minuscule et un chiffre">
+				<p id="passwordHelp" class="sr-only">Doit contenir entre 2 et 8 caractères - Minimum 1 majuscule, 1 minuscule et un chiffre</p>
+				
+				<input type="submit" value="Se connecter">
+			</form>
+			<a href="#" class="passwordForget">Mot de passe oublié</a>
+		</section>
+
+	</main>
+
+	<footer>
+		<div class="footerContent">
+			<nav>
+				<ul>
+					<li><a href="#">Mentions Légales</a></li>
+				</ul>
+			</nav>
+		</div>
+	</footer>
+
 </body>
+
 </html>
