--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -143,5 +143,45 @@
 		</ul>
 	</nav>
 </footer>
+
+<!-- Gestion du modal Administateur -->
+<!-- choix d'un modal classique over dialog instauré sur HTML5 pour les modal pour permettre un fonctionnement adapté aux anciens navigateurs -->
+<!-- Instauration du conteneur modal qui apparait en administrateur avec en param : 
+  - 1 id pour l'indentification JS
+  - 1 class pour l'indentification CSS 
+  - 1 aria-hidden sur true pour le camoufler au sr
+  - 1 style display none pour camoufler le modal
+  - 1 role dialog pour informer à son apparition qu'une fenêtre s'est ouverte par dessus le contenu principal au sr
+  - 1 aria-modal true pour indiquer au sr un modal et que le contenu princiapl n'est plus accessible durant ce temps
+-->
+<div id="js-modal-wrapper" class="modalWrapper" style="display: none;" aria-hidden="true" role="dialog" aria-modal="true">
+
+	<!-- Contenu du modal avec role sur document pour indiquer au sr qu'il peut lire normalement avec les commandes standard le contenu -->
+	<div class="modalContent" role="document">
+		<button class="closeModalWrapper"><img src="./assets/images/xmark.png" alt="Fermer la fenêtre"></button>
+		<button id="js-goto-page1" class="prevModalPage"><img src="./assets/images/arrow-left.png" alt="Revenir à la Galerie" style="display: none;" aria-hidden="true"></button>
+
+		<!-- Partie 1 : Galerie Photo -->
+		 <section id="js-modal-page1" class="modalPage" aria-labelledby="js-modal-title1">
+			<h2 id="js-modal-title1">Galerie Photo</h2>
+			<!-- Div qui contiendra la galerie photo généré dynamiquement -->
+			<div id="js-modal-bodyGallery" class="modalBodyGallery">
+				<!-- Contenu qui sera généré -->
+			</div>
+			<button id="js-goto-page2">Ajouter une photo</button>
+		 </section>
+
+		<!-- Partie 2 : Formulaire Multipart/FormData -->
+		 <section id="js-modal-page2" class="modalPage" aria-labelledby="js-modal-title2" style="display: none;" aria-hidden="true">
+			<h2 id="js-modal-title2">Ajout Photo</h2>
+			<!-- Div qui contiendra la galerie photo généré dynamiquement -->
+			<div id="js-modal-bodyUpload" class="modalBodyUpload">
+				<!-- Contenu qui sera généré -->
+			</div>
+			<input id="js-modal-btnValidate" type="submit" value="Valider">
+		 </section>
+	</div>
+ </div>
+
 </body>
 </html>
