--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/modal.css">
 	<link rel="icon" type="image/x-icon" href="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/images/oc-icon.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
           integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -158,8 +159,12 @@
 
 	<!-- Contenu du modal avec role sur document pour indiquer au sr qu'il peut lire normalement avec les commandes standard le contenu -->
 	<div class="modalContent" role="document">
-		<button class="closeModalWrapper"><img src="./assets/images/xmark.png" alt="Fermer la fenêtre"></button>
-		<button id="js-goto-page1" class="prevModalPage"><img src="./assets/images/arrow-left.png" alt="Revenir à la Galerie" style="display: none;" aria-hidden="true"></button>
+		
+		<div class="modalMenu">
+			<!-- Bouton qui vont permettre de quitter le modale ou de revenir à l'ancienne page -->
+			<button id="js-goto-page1" class="prevModalPage" style="display: none;" aria-hidden="true"><img src="./assets/images/arrow-left.png" alt="Revenir à la Galerie"></button>
+			<button class="closeModalWrapper"><img src="./assets/images/xmark.png" alt="Fermer la fenêtre"></button>
+		</div>
 
 		<!-- Partie 1 : Galerie Photo -->
 		 <section id="js-modal-page1" class="modalPage" aria-labelledby="js-modal-title1">
