Réglage CSS Modal Page1

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -173,7 +173,7 @@
 			<div id="js-modal-bodyGallery" class="modalBodyGallery">
 				<!-- Contenu qui sera généré -->
 			</div>
-			<button id="js-goto-page2">Ajouter une photo</button>
+			<button id="js-goto-page2" class="gotoPage2">Ajouter une photo</button>
 		 </section>
 
 		<!-- Partie 2 : Formulaire Multipart/FormData -->
@@ -183,7 +183,7 @@
 			<div id="js-modal-bodyUpload" class="modalBodyUpload">
 				<!-- Contenu qui sera généré -->
 			</div>
-			<input id="js-modal-btnValidate" type="submit" value="Valider">
+			<input id="js-modal-btnValidate" class="btnForm" type="submit" value="Valider">
 		 </section>
 	</div>
  </div>
