Ouverture et fermeture modale et gestion propagation et listener

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
           integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<script type="module" src="./assets/scripts/modal.js" defer></script>
 	<script type="module" src="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/scripts/script.js" defer></script>
 	<script type="module" src="assets/scripts/filtre.js" defer></script>
 </head>
