Mise en forme finale du CSS Modal Page 1

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="stylesheet" href="./assets/modal.css">
-	<link rel="icon" type="image/x-icon" href="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/images/oc-icon.png">
+	<link rel="icon" type="image/x-icon" href="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/icons/oc-icon.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
           integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -163,8 +163,8 @@
 		
 		<div class="modalMenu">
 			<!-- Bouton qui vont permettre de quitter le modale ou de revenir à l'ancienne page -->
-			<button id="js-goto-page1" class="prevModalPage" style="display: none;" aria-hidden="true"><img src="./assets/images/arrow-left.png" alt="Revenir à la Galerie"></button>
-			<button class="closeModalWrapper"><img src="./assets/images/xmark.png" alt="Fermer la fenêtre"></button>
+			<button class="closeModalWrapper"><img src="./assets/icons/xmark.png" alt="Fermer la fenêtre"></button>
+			<button id="js-goto-page1" class="prevModalPage" style="display: none;" aria-hidden="true"><img src="./assets/icons/arrow-left.png" alt="Revenir à la Galerie"></button>
 		</div>
 
 		<!-- Partie 1 : Galerie Photo -->
