Restructuration des fonctions modale -Gestion de la page voulu

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -159,7 +159,7 @@
 <div id="js-modal-wrapper" class="modalWrapper" style="display: none;" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="js-modal-title1">
 
 	<!-- Contenu du modal avec role sur document pour indiquer au sr qu'il peut lire normalement avec les commandes standard le contenu -->
-	<div class="modalContent" role="document">
+	<div id="js-modal-content" class="modalContent" role="document">
 		
 		<div class="modalMenu">
 			<!-- Bouton qui vont permettre de quitter le modale ou de revenir à l'ancienne page -->
