--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -17,6 +17,7 @@
 	<script type="module" src="./assets/scripts/modal.js" defer></script>
 	<script type="module" src="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/scripts/script.js" defer></script>
 	<script type="module" src="assets/scripts/filtre.js" defer></script>
+	<script type="module" src="assets/scripts/config.js" defer></script>
 </head>
 
 <body>
