--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,6 +18,7 @@
 	<script type="module" src="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/scripts/script.js" defer></script>
 	<script type="module" src="assets/scripts/filtre.js" defer></script>
 	<script type="module" src="assets/scripts/config.js" defer></script>
+	<script type="module" src="assets/scripts/projet.js" defer></script>
 </head>
 
 <body>
