Ajout d'une fonctionnalité glissez/déposer

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -192,7 +192,7 @@
 					<label id="js-form-loadTitle" for="js-form-loadFile">+ Ajouter photo</label>
 					<input id="js-form-loadFile" class="modalFormLoad" name="js-form-loadFile" type="file" accept="image/png, image/jpeg" required>
 					<p>jpg, png: 4mo max <br>
-					Glissez/Déposez</p>
+					Glissez/Déposez (1 unique fichier)</p>
 				</div>
 				<div id="dropboxOn" class="dropBox" style="display: none;" aria-hidden="true"></div>
 
