Envoie Formulaire à l'API et ajout aux travaux

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -190,7 +190,7 @@
 				<div id="dropboxOff" class="dropBox">
 					<img class="imgIcone" src="./assets/icons/picture-svgrepo-com 1.png" alt="Icone d'une répresentation d'image">
 					<label id="js-form-loadTitle" for="js-form-loadFile">+ Ajouter photo</label>
-					<input id="js-form-loadFile" class="modalFormLoad" name="js-form-loadFile" type="file" accept="image/png, image/jpeg" >
+					<input id="js-form-loadFile" class="modalFormLoad" name="image" type="file" accept="image/png, image/jpeg" >
 					<p>jpg, png: 4mo max <br>
 					Glissez/Déposez (1 unique fichier)</p>
 				</div>
