--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,24 +10,35 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="stylesheet" href="./assets/modal.css">
-	<link rel="icon" type="image/x-icon" href="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/icons/oc-icon.png">
+	<link rel="icon" type="image/x-icon" href="assets/icons/oc-icon.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
           integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script type="module" src="./assets/scripts/modal.js" defer></script>
-	<script type="module" src="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/scripts/script.js" defer></script>
+	<script type="module" src="assets/scripts/script.js" defer></script>
 	<script type="module" src="assets/scripts/filtre.js" defer></script>
 	<script type="module" src="assets/scripts/config.js" defer></script>
 	<script type="module" src="assets/scripts/projet.js" defer></script>
+	<script type="module" src="assets/scripts/historique.js" defer></script>
 </head>
 
 <body>
 
 	<!-- Ajout de la partie déstiné à informer que le mode édition administrateur est accessible -->
-	<div class="editionMode" aria-hidden="true">
-		<i class=" fa-regular fa-pen-to-square" aria-hidden="true"></i>
-		<span class="editionModeTxt">Mode édition</span>
-	</div>
+	<section class="editionMode" aria-hidden="true">
+		<div id="js-info-title" class="infoTitle">
+			<i class=" fa-regular fa-pen-to-square" aria-hidden="true"></i>
+			<span class="editionModeTxt">Mode édition</span>
+			<p id="js-info-edit" class="infoEdit" aria-hidden="true"> ICI</p>
+		</div>
+		<div id="js-info-histo" class="infoHistoric"aria-hidden="true" style="display: none;">
+			<p> Historique des projets:</p>
+			<ul id="js-info-histo-list" class="infoList">
+
+			</ul>
+			<p id="js-delete-histo" class="deleteHisto">Supprimer l'historique</p>
+		</div>
+	</section>
 
 	<div class="contenuP">
 
