--- a/FrontEnd/connexionFormulaire.html
+++ b/FrontEnd/connexionFormulaire.html
@@ -53,7 +53,7 @@
 				<input type="password" name="pass-word" id="pass-word" required autocomplete="current-password" aria-describedby="passwordHelp"
 				title="Doit contenir entre 2 et 8 caractères - Minimum 1 majuscule, 1 minuscule et un chiffre">
 				<p id="passwordHelp" class="sr-only">Doit contenir entre 2 et 8 caractères - Minimum 1 majuscule, 1 minuscule et un chiffre</p>
-				
+				<span id="infoError" class="infoError"></span>
 				<input type="submit" value="Se connecter">
 			</form>
 			<a href="#" class="passwordForget">Mot de passe oublié</a>
