--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -200,7 +200,7 @@
 				<!-- Zone d'affichage et d'importation d'une nouvelle image de projet -->
 				<div id="dropboxOff" class="dropBox">
 					<img class="imgIcone" src="./assets/icons/picture-svgrepo-com 1.png" alt="Icone d'une répresentation d'image">
-					<label id="js-form-loadTitle" for="js-form-loadFile">+ Ajouter photo</label>
+					<label id="js-form-loadTitle" for="js-form-loadFile" tabindex="0" role="button">+ Ajouter photo</label>
 					<input id="js-form-loadFile" class="modalFormLoad" name="image" type="file" accept="image/png, image/jpeg" >
 					<p>jpg, png: 4mo max <br>
 					Glissez/Déposez (1 unique fichier)</p>
@@ -214,7 +214,7 @@
 				<!-- Mise en place d'une div pour le comportement du select identique à la maquette et la même mise en page -->
 				 <label for="js-form-list">Catégorie</label>
 				<div id="dropList" class="dropList">
-					<div class="selected"><p id="enterCategorie"></p><img class="dropdownMark" src="./assets/icons/chevron-down-solid 1.png" alt="Faire défiler le menu"></div>
+					<div class="selected"><p id="enterCategorie"></p><img class="dropdownMark" src="./assets/icons/chevron-down-solid 1.png" alt="Faire défiler le menu" tabindex="0" role="button"></div>
 					<ul id="js-form-options" class="options" style="display: none;" aria-hidden="true"></ul>
 				</div>
 				<input id="js-modal-btnValidate" class="btnForm" type="submit" value="Valider" method="post" action="#">
