--- a/FrontEnd/connexionFormulaire.html
+++ b/FrontEnd/connexionFormulaire.html
@@ -8,14 +8,13 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="icon" type="image/x-icon" href="assets/icons/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
           integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="./assets/formStyle.css">
-	<link rel="icon" type="image/x-icon" href="/Portfolio-architecte-sophie-bluel/FrontEnd/assets/images/oc-icon.png">
-	<script type="module" src="./assets/scripts/admin.js" defer></script>
-	<script type="module" src="./assets/scripts/config.js" defer></script>
+	<link rel="icon" type="image/x-icon" href="assets/icons/oc-icon.png">
+	<script type="module" src="./assets/scripts/admin.js"></script>
+	<script type="module" src="./assets/scripts/config.js"></script>
 	
 </head>
 
@@ -28,36 +27,36 @@
 			<ul class="liste-nav">
 				<li><a href="/Portfolio-architecte-sophie-bluel/FrontEnd/index.html#portfolio">projets</a></li>
 				<li><a href="/Portfolio-architecte-sophie-bluel/FrontEnd/index.html#contact">contact</a></li>
-				<!-- Ajout d'un aria pour l'accésibilité et les sr et indiquer qu'il s'agit de la page actuelle -->
+				<!-- Ajout d'un aria pour l'accesibilité des lecteurs d'écran (sr) afin d'indiquer la page active -->
 				<li><a href="#" aria-current="page">login</a></li>
 				<li><a href="https://www.instagram.com/"><span class="sr-only">Lien Instagram de Sophie Bluel</span><i class=" fa-lg fa-brands fa-instagram" aria-hidden="true"></i></a></li>
 			</ul>
 		</nav>
 	</header>
 
-	<!-- Contenu principale de la page  -->
+	<!-- Contenu principal de la page  -->
 	<main class="formMain">
 		
-		<!-- Mise en place de la section contenant le formulaire d'authentification -->
-		 <!-- Utilisationd de required pour la sécurité des informations, de autocomplete pour l'expérience UX mobile avec amélioration
-		  de la rapidité -->
+		<!-- Mise en place d'une section contenant le formulaire d'authentification -->
+		 <!-- Utilisation de required pour la sécurité des informations, de autocomplete pour l'expérience UX mobile avec amélioration de la rapidité -->
 		<section id="contactForm">
 			<h2>Log In</h2>
-			<form action="#" method="post">
+			<form id="js-form-auth" action="#" method="post">
 				<label for="email">E-mail</label>
 				<input type="email" name="email" id="email" required autocomplete="email">
 
-				<label for="pass-word">Mot de passe</label>
-
+				<label for="password">Mot de passe</label>
 				<!-- Partie input pour le mot de passe avec title pour indication du format min nécessaire et aria-describedby pour donner ces infos
 				 vocalement sur des navigateurs qui ne prennent pas en compte le title -->
-				<input type="password" name="pass-word" id="pass-word" required autocomplete="current-password" aria-describedby="passwordHelp"
+				<input type="password" name="password" id="password" required autocomplete="current-password" aria-describedby="passwordHelp"
 				title="Doit contenir entre 2 et 8 caractères - Minimum 1 majuscule, 1 minuscule et un chiffre">
 				<p id="passwordHelp" class="sr-only">Doit contenir entre 2 et 8 caractères - Minimum 1 majuscule, 1 minuscule et un chiffre</p>
+
+				<!-- Partie affichant les erreurs sur le formulaire -->
 				<span id="infoError" class="infoError"></span>
 				<input type="submit" value="Se connecter">
 			</form>
-			<a href="#" class="passwordForget">Mot de passe oublié</a>
+			<a href="javascript:void(0)" class="passwordForget">Mot de passe oublié</a>
 		</section>
 
 	</main>
@@ -66,7 +65,7 @@
 		<div class="footerContent">
 			<nav>
 				<ul>
-					<li><a href="#">Mentions Légales</a></li>
+					<li><a href="javascript:void(0)">Mentions Légales</a></li>
 				</ul>
 			</nav>
 		</div>
