Amélioration de la fonction de filtrage et ajout des commentaire en conséquence

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -83,7 +83,7 @@
 				<i class=" fa-regular fa-pen-to-square" aria-hidden="true"><span class="sr-only">Modifier le contenu</span><span id="js-modif" tabindex="0">modifier</span></i>
 				<!-- Div qui permet de regrouper, délimiter et agencer la partie contenant les différents boutons de filtrage galerie photo -->
 				<div class="menu-filter">
-					<button class="js-btn-maj">Tous</button>
+					<!-- Bouton qui seront générés dynamiquement -->
 				</div>
 				
 				<!-- Conteneur parent pour la mise en disposition Grid qui sera utilisée en CSS par l'agencement des photos mise en place avec figure -->
