Modifications des liens entre HTML

--- a/FrontEnd/connexionFormulaire.html
+++ b/FrontEnd/connexionFormulaire.html
@@ -22,7 +22,7 @@
 
 	<!-- En-tête de la page contenant le menu de navigation et logo du site -->
 	<header class="form-head">
-		<h1><a href="/Portfolio-architecte-sophie-bluel/FrontEnd/index.html"><img src="./assets/images/Logo.png" alt="Sophie Bluel - Page d'accueil"></a></h1>
+		<h1><a href="./index.html"><img src="./assets/images/Logo.png" alt="Sophie Bluel - Page d'accueil"></a></h1>
 		<nav>
 			<ul class="liste-nav">
 				<li><a href="/Portfolio-architecte-sophie-bluel/FrontEnd/index.html#portfolio">projets</a></li>
