--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -50,7 +50,7 @@
 				<ul class="liste-nav">
 					<li><a href="#portfolio">projets</a></li>
 					<li><a href="#contact">contact</a></li>
-					<li><a class="login" href="/Portfolio-architecte-sophie-bluel/FrontEnd/connexionFormulaire.html">login</a></li>
+					<li><a class="login" href="./connexionFormulaire.html">login</a></li>
 					<li><a href="https://www.instagram.com/"><span class="sr-only">Lien Instagram de Sophie Bluel</span><i class=" fa-lg fa-brands fa-instagram" aria-hidden="true"></i></a></li>
 				</ul>
 			</nav>
