Modifications zone filtres

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -180,7 +180,7 @@
 				</div>
 				<input id="js-modal-btnValidate" class="btnForm" type="submit" value="Valider">
 			</form>
-			<p id="form-error" style="color: red;"></p>
+			<p id="form-error-2" style="color: red;"></p>
 
 		 </section>
 	</div>
