Gestion affichage erreur pour une suppresion de projet avec connexion api absente

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -147,6 +147,7 @@
 				<!-- Contenu qui sera généré -->
 			</div>
 			<button id="js-goto-page2" class="gotoPage2">Ajouter une photo</button>
+			<p id="form-error" style="color: red;"></p>
 		 </section>
 
 		<!-- Partie 2 : Formulaire Multipart/FormData -->
